# IS-archive-py

./: .gitignore  README.md
C/: kolos1.c  wyjscie.txt
Kubernetes/: kubernetes_install_1.25.txt
aip_lab/: bogo_insertion_insertion sentinel_quicksort.py  docstring_sphynx.py  hash.py  is19_aip_wierzcholek_Ewa_Namysl.ipynb  klasa_adres.py  klasa_dowod.py  klasa_gruszka.py  klasa_ulamek_blokowanie_dodawania_atrybutow.py  liniowe_binarne_liniowe_wartownik.py  merge_counting.py  palindrom_4cyfry.py  powtorka_zad1-3.py
aisd_konwersatorium/: min_maks_rekur.py  potega2.py  potega3.py  stos.py
aisd_lab/: Zestaw1_klasy.py  Zestaw3.py  Zestaw6.py  Zestaw8_podpunkty_2_3b_4.py  heapmin_heapsortdesc.py  leaf.ipynb  usrednienie_matplot.py  zajecia17.11.py  zajecia22.12.py
grafika/: bezier.ipynb  bezier_bresenham.ipynb  blur_gauss.py  moj_zalosny_antialiasing.ipynb  okrag_enhancedBresenham.ipynb  wyklad_naive.ipynb
hashtables/: zad2_hasz_v2.py
kol_egz/: egzam1_generator_cosinus.py  kolos1_dekompozycja_podlista_sumy.py  kolos3.py  kolos4.py
podstawy_sztucznych_inteligencji/: PCA.ipynb  Quiz_SVM_example_numerical_sklearn.ipynb  Quiz_perceptron.ipynb  numpy_wstep.ipynb  random_forest.ipynb
praca_inzynierska/: MAIN.tex  rozdzial0-preambula.tex  rozdzial0-wstep.tex  rozdzial1-teoria.tex  rozdzial2-praktyka.tex  rozdzial3-podsumowanie.tex  rozdzial4-zalaczniki.tex  rozdzialX-bibliografia.bib
robotyka/: odometria.py
semestr_5/Make_CMake/kolokwium/zad4/: CMakeLists.txt
sortowanie_wyszukiwanie/: wyszukiwania_klasy.py
strona_Ewa_Namysl/: formularz.html.add  galeria.html.add  (+6 more)
(+585 files in other folders)
